--- a/index.html
+++ b/index.html
@@ -34,38 +34,38 @@
   <!-- Lista de Playlists -->
   <div class="playlists">
     <a href="https://open.spotify.com/playlist/2TBicmxCiuZzga8TyDHHvN?si=3ee7f26bce1a4744" target="_blank">
-      <img src="priestess.png" alt="Playlist 1">
+      <img src="imagens/priestess.png" alt="Playlist 1">
     </a>
     <a href="https://open.spotify.com/playlist/SEU_PLAYLIST_ID_AQUI" target="_blank">
-      <img src="hermit.png" alt="Playlist 2">
+      <img src="imagens/hermit.png" alt="Playlist 2">
     </a>
     <a href="https://open.spotify.com/playlist/SEU_PLAYLIST_ID_AQUI" target="_blank">
-      <img src="death.png" alt="Playlist 3">
+      <img src="imagens/death.png" alt="Playlist 3">
     </a>
     <a href="https://open.spotify.com/playlist/SEU_PLAYLIST_ID_AQUI" target="_blank">
-      <img src="devil.png" alt="Playlist 4">
+      <img src="imagens/devil.png" alt="Playlist 4">
     </a>
     <a href="https://open.spotify.com/playlist/SEU_PLAYLIST_ID_AQUI" target="_blank">
-      <img src="sun.png" alt="Playlist 5">
+      <img src="imagens/sun.png" alt="Playlist 5">
     </a>
     <a href="https://open.spotify.com/playlist/SEU_PLAYLIST_ID_AQUI" target="_blank">
-      <img src="judgement.png" alt="Playlist 6">
+      <img src="imagens/judgement.png" alt="Playlist 6">
     </a>
   </div>
 
 <!--Redes sociais-->
 <div class= "logos">
   <a href="https://www.instagram.com/o_jandeco/" target="_blank">
-    <img src="instagram.png" alt="Instagram">
+    <img src="imagens/instagram.png" alt="Instagram">
   </a>
   <a href="https://www.linkedin.com/in/janderoliver/" target="_blank">
-    <img src="Linkedin.png" alt="LinkedIn">
+    <img src="imagens/Linkedin.png" alt="LinkedIn">
   </a>
   <a href="https://github.com/haraaak" target="_blank">
-    <img src="github.png" alt="GitHub">
+    <img src="imagens/github.png" alt="GitHub">
   </a>
   <a href="https://open.spotify.com/user/jbs92y1hfhytvzfdqdv210n5y?si=7f60200bae944240" target="_blank">
-    <img src="Spotify.png" alt="Spotify">
+    <img src="imagens/Spotify.png" alt="Spotify">
   </a>
 </div>
 
