--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
   <a href="https://www.linkedin.com/in/janderoliver/" target="_blank">
     <img src="imagens/Linkedin.png" alt="LinkedIn">
   </a>
-  <a href="https://github.com/haraaak" target="_blank">
+  <a href="https://github.com/jander-oliveira" target="_blank">
     <img src="imagens/github.png" alt="GitHub">
   </a>
   <a href="https://open.spotify.com/user/jbs92y1hfhytvzfdqdv210n5y?si=7f60200bae944240" target="_blank">
