Update de links
Links das playlists agora funcionais

--- a/index.html
+++ b/index.html
@@ -36,19 +36,19 @@
     <a href="https://open.spotify.com/playlist/2TBicmxCiuZzga8TyDHHvN?si=3ee7f26bce1a4744" target="_blank">
       <img src="imagens/priestess.png" alt="Playlist 1">
     </a>
-    <a href="https://open.spotify.com/playlist/SEU_PLAYLIST_ID_AQUI" target="_blank">
+    <a href="https://open.spotify.com/playlist/2vNalN6SLL7EBrUOzEFeUi?si=bc13044607b746cf" target="_blank">
       <img src="imagens/hermit.png" alt="Playlist 2">
     </a>
-    <a href="https://open.spotify.com/playlist/SEU_PLAYLIST_ID_AQUI" target="_blank">
+    <a href="https://open.spotify.com/playlist/6bfTt6pLOWl8tJJRzLABAE?si=3ae0ffb648e4426b" target="_blank">
       <img src="imagens/death.png" alt="Playlist 3">
     </a>
-    <a href="https://open.spotify.com/playlist/SEU_PLAYLIST_ID_AQUI" target="_blank">
+    <a href="https://open.spotify.com/playlist/5kufPH0XX7yPo3tRVOwEi0?si=f441dde25a3d43e5" target="_blank">
       <img src="imagens/devil.png" alt="Playlist 4">
     </a>
-    <a href="https://open.spotify.com/playlist/SEU_PLAYLIST_ID_AQUI" target="_blank">
+    <a href="https://open.spotify.com/playlist/2RUdVGdEWewq5aYZ4rdHe3?si=4d0e261450224946" target="_blank">
       <img src="imagens/sun.png" alt="Playlist 5">
     </a>
-    <a href="https://open.spotify.com/playlist/SEU_PLAYLIST_ID_AQUI" target="_blank">
+    <a href="https://open.spotify.com/playlist/2F1EAEVGEd2s79vzThTriQ?si=c7163e5b244d4708" target="_blank">
       <img src="imagens/judgement.png" alt="Playlist 6">
     </a>
   </div>
